--- a/blog.html
+++ b/blog.html
@@ -387,7 +387,7 @@
                                 </ul>
                             </div>
                             <a href="#blog-single" class="d-block zoom mt-md-0 mt-3">
-                                <img src="./images/1.jpg"
+                                <img src="./images/9.jpg"
                                     alt="Помогите Изображению" class="img-fluid radius-image news-image"></a>
                         </div>
 
@@ -412,7 +412,7 @@
                                 </ul>
                             </div>
                             <a href="#blog-single" class="d-block zoom mt-md-0 mt-3">
-                                <img src="./images/1.jpg"
+                                <img src="./images/9.jpg"
                                     alt="Помогите Изображению" class="img-fluid radius-image news-image"></a>
                         </div>
 
@@ -437,7 +437,7 @@
                                 </ul>
                             </div>
                             <a href="#blog-single" class="d-block zoom mt-md-0 mt-3">
-                                <img src="./images/1.jpg"
+                                <img src="./images/9.jpg"
                                     alt="Помогите Изображению" class="img-fluid radius-image news-image"></a>
                         </div>
 
@@ -446,7 +446,7 @@
                                 <div class="list-view list-view1">
                                     <div class="grids5-info">
                                         <a href="#blog-single" class="d-block zoom">
-                                            <img src="./images/1.jpg"
+                                            <img src="./images/9.jpg"
                                                 alt="Помогите Изображению" class="img-fluid radius-image news-image"></a>
                                         <div class="blog-info align-self">
                                             <a href="#blog-single" class="blog-desc1">Home to write High-Level blog
@@ -468,7 +468,7 @@
                                     
                                     <div class="grids5-info mt-5">
                                         <a href="#blog-single" class="d-block zoom">
-                                            <img src="./images/1.jpg"
+                                            <img src="./images/9.jpg"
                                                 alt="Помогите Изображению" class="img-fluid radius-image news-image"></a>
                                         <div class="blog-info align-self">
                                             <a href="#blog-single" class="blog-desc1">9 Reasons why your Blog posts are
@@ -494,7 +494,7 @@
                                 <div class="list-view list-view1">
                                     <div class="grids5-info">
                                         <a href="#blog-single" class="d-block zoom">
-                                            <img src="./images/1.jpg"
+                                            <img src="./images/9.jpg"
                                                 alt="Помогите Изображению" class="img-fluid radius-image news-image"></a>
                                         <div class="blog-info align-self">
                                             <a href="#blog-single" class="blog-desc1">How to run a Blog lead generation
@@ -516,7 +516,7 @@
                                     
                                     <div class="grids5-info mt-5">
                                         <a href="#blog-single" class="d-block zoom">
-                                            <img src="./images/1.jpg"
+                                            <img src="./images/9.jpg"
                                                 alt="Помогите Изображению" class="img-fluid radius-image news-image"></a>
                                         <div class="blog-info align-self">
                                             <a href="#blog-single" class="blog-desc1">The Anatomy of a perfect Blog post
@@ -557,7 +557,8 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="#blog-single" class="d-block zoom mt-md-0 mt-3"><img src="assets/images/14.jpg"
+                            <a href="#blog-single" class="d-block zoom mt-md-0 mt-3">
+                                <img src="assets/images/9.jpg"
                                     alt="" class="img-fluid radius-image news-image"></a>
                         </div>
 
@@ -581,7 +582,8 @@
                                     </li>
                                 </ul>
                             </div>
-                            <a href="#blog-single" class="d-block zoom mt-md-0 mt-3"><img src="assets/images/15.jpg"
+                            <a href="#blog-single" class="d-block zoom mt-md-0 mt-3">
+                                <img src="assets/images/9.jpg"
                                     alt="" class="img-fluid radius-image news-image"></a>
                         </div>
 
