--- a/blog.html
+++ b/blog.html
@@ -328,7 +328,7 @@
                             
                             <div class="grids5-info mt-5">
                                 <a href="#blog-single" class="d-block zoom">
-                                    <img src="assets/images/1.jpg" alt="Помогите Изображению"
+                                    <img src="./images/1.jpg" alt="Помогите Изображению"
                                         class="img-fluid radius-image news-image"></a>
                                 <div class="blog-info align-self">
                                     <a href="#blog-single" class="blog-desc1">10 Fresh Ways to Get Better Results From
@@ -365,7 +365,7 @@
             <div class="row mt-5 pt-5">
                 <div class="col-lg-9 most-recent">
                     <h3 class="section-title-left">Советы Туристам</h3>
-                    <div class="list-view ">
+                    <div class="list-view">
                         <div class="grids5-info img-block-mobile">
                             <div class="blog-info align-self">
                                 <span class="category">Technology</span>
@@ -559,7 +559,7 @@
                             </div>
                             <a href="#blog-single" class="d-block zoom mt-md-0 mt-3">
                                 <img src="assets/images/9.jpg"
-                                    alt="" class="img-fluid radius-image news-image"></a>
+                                    alt="Помогите Изображению" class="img-fluid radius-image news-image"></a>
                         </div>
 
                         <div class="grids5-info img-block-mobile mt-5">
@@ -584,7 +584,7 @@
                             </div>
                             <a href="#blog-single" class="d-block zoom mt-md-0 mt-3">
                                 <img src="assets/images/9.jpg"
-                                    alt="" class="img-fluid radius-image news-image"></a>
+                                    alt="Помогите Изображению" class="img-fluid radius-image news-image"></a>
                         </div>
 
                     </div>
