--- a/blog.html
+++ b/blog.html
@@ -558,7 +558,7 @@
                                 </ul>
                             </div>
                             <a href="#blog-single" class="d-block zoom mt-md-0 mt-3">
-                                <img src="assets/images/9.jpg"
+                                <img src="./images/9.jpg"
                                     alt="Помогите Изображению" class="img-fluid radius-image news-image"></a>
                         </div>
 
@@ -583,7 +583,7 @@
                                 </ul>
                             </div>
                             <a href="#blog-single" class="d-block zoom mt-md-0 mt-3">
-                                <img src="assets/images/9.jpg"
+                                <img src="./images/9.jpg"
                                     alt="Помогите Изображению" class="img-fluid radius-image news-image"></a>
                         </div>
 
