--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <title>Блог | Новый Поворот</title>
+  
+    <meta name="description" content="Блог | Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации">
+    
+    <!-- Open Graph data-->
+    <meta property="og:title" content="Туры выходного дня 'Новый поворот' | Блог">
+    <meta property="og:description" content="Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации... Путешествуйте с улыбкой! "/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://novipovorot.pp.ua/blog.html"/>
+    <meta property="og:image" content="images/novi-povorot.jpg">
+    <!--End Open Graph data-->
 
+    <!--favicon.ico-->
+    <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
+    <!--//favicon.ico-->    
+    
     <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet">
 
