--- a/blog.html
+++ b/blog.html
@@ -68,6 +68,9 @@
     <div class="w3l-homeblock1 py-5">
         <div class="container pt-lg-5 pt-md-4">
             
+            <h3 class="heading text-capitalize text-center">Какой-то заголовок Блога</h3>
+            <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
+            
             <!-- Блок Новости Запорожья -->
             <div class="row">
                 <div class="col-lg-9">
