--- a/blog.html
+++ b/blog.html
@@ -68,7 +68,9 @@
     <div class="w3l-homeblock1 py-5">
         <div class="container pt-lg-5 pt-md-4">
             
-            <h3 class="heading text-capitalize text-center">Какой-то заголовок Блога</h3>
+            <h3 class="heading text-capitalize text-center">
+               Новости Украины и Запорожья. Туризм и путешествия. В этом блоге ответы на все Ваши вопросы!
+            </h3>
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             
             <!-- Блок Новости Запорожья -->
