--- a/blog.html
+++ b/blog.html
@@ -76,7 +76,7 @@
             <!-- Блок Новости Запорожья -->
             <div class="row">
                 <div class="col-lg-9">
-                    <h3 class="section-title-left">Новости Запорожья</h3>
+                    <h3 class="section-title-left">Новости</h3>
                     <div class="row">
                         
                         <div class="col-lg-5 col-md-6 item">
@@ -299,7 +299,7 @@
 
             <!-- Блок Достопримечательности Запорожья -->
             <div class="item mt-5 pt-lg-5">
-                <h3 class="section-title-left">Достопримечательности Запорожья </h3>
+                <h3 class="section-title-left">Достопримечательности</h3>
                 <div class="row">
                     <div class="col-lg-5 col-md-6">
                         <div class="list-view list-view1">
