--- a/blog.html
+++ b/blog.html
@@ -73,8 +73,11 @@
         <div class="container pt-lg-5 pt-md-4">
             
             <h3 class="heading text-capitalize text-center">
-               Новости Украины и Запорожья. Туризм и путешествия. В этом блоге ответы на все Ваши вопросы!
+               В блоге ответы на Ваши вопросы!
             </h3>
+            <h4 class="heading text-capitalize text-center">
+                Новости Украины и Запорожья. Туризм и путешествия. 
+            </h4>  
             <p class="text mt-2 mb-5 text-center"> Туры выходного дня "Новый Поворот" </p>
             
             <!-- Блок Новости Запорожья -->
