--- a/blog.html
+++ b/blog.html
@@ -69,7 +69,7 @@
     </section>
     <!-- //banner -->
 
-    <div class="w3l-homeblock1 py-5">
+    <div class="w3l-homeblock1">
         <div class="container pt-lg-5 pt-md-4">
             
             <h3 class="heading text-capitalize text-center">
