--- a/blog.html
+++ b/blog.html
@@ -879,7 +879,7 @@
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     
      <!-- move top -->
-     <script>
+     <!--  <script>
         // When the user scrolls down 20px from the top of the document, show the button
         window.onscroll = function () {
             scrollFunction()
@@ -898,7 +898,8 @@
             document.body.scrollTop = 0;
             document.documentElement.scrollTop = 0;
         }
-     </script>
+     </script> 
+      -->
      <!-- //move top -->
     
 </body>
