--- a/blog.html
+++ b/blog.html
@@ -756,7 +756,7 @@
                         <div class="footer-text">
                             <p>Расположение: 69000, Запорожье, Украина</p>
                             <p>Телефон: +38(098) 577 15 79, +38(050) 670 22 64</p>
-                            <p>Электронная почта: <a href="mailto:dovgalyv@ukr.net">dovgalyv@ukr.net</a></p>
+                            <p>Электронная почта: <a href="mailto:dovgalyv@ukr.net"  style="font-weight: 400;">dovgalyv@ukr.net</a></p>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6 footer-grid_section mt-sm-0 mt-4">
@@ -804,7 +804,7 @@
                             <h3>Места для путешествий</h3>
                         </div>
                         <div class="row">
-                            <ul class="col-6 links">
+                            <ul class="col-6 links" style="font-weight: 400;">
                                 <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html" class="scroll">Одесса</a>
