--- a/blog.html
+++ b/blog.html
@@ -404,12 +404,12 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-2 col-sm-6 mt-lg-0 mt-5">
+                    <!--<div class="col-lg-2 col-sm-6 mt-lg-0 mt-5">
                         <div class="ad-img">
                             <a href="#ad-img">
                                 <img src="./images/ad1.jpg" class="img-fluid" alt="Помогите Изображению" /></a>
                         </div>
-                    </div>
+                    </div>-->
 
                 </div>
             </div>
