--- a/blog.html
+++ b/blog.html
@@ -804,19 +804,19 @@
                             <h3>Места для путешествий</h3>
                         </div>
                         <div class="row">
-                            <ul class="col-6 links" style="font-weight: 400;">
-                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html" class="scroll">Одесса</a>
+                            <ul class="col-6 links">
+                                <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll"  style="font-weight: 400;">Турция</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll"  style="font-weight: 400;">Пиво</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html" class="scroll"  style="font-weight: 400;">Одесса</a>
                                 </li>
-                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
+                                <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll"  style="font-weight: 400;">Карпаты</a>
                                 </li>
                             </ul>
                             <ul class="col-6 links">
                                 <li><a href="https://novipovorot.pp.ua/page-Limonariy.html"
-                                        class="scroll">Лимонарий</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
+                                        class="scroll"  style="font-weight: 400;">Лимонарий</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll"  style="font-weight: 400;">ЛОЛ</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll"  style="font-weight: 400;">Хортица</a>
                                 </li>
                             </ul>
                         </div>
