--- a/blog.html
+++ b/blog.html
@@ -51,8 +51,9 @@
                 <input type="checkbox" id="drop" />
                 <ul class="menu ml-auto mt-1">
                     <li class=""><a href="index.html">Главная</a></li>
-                    <li class="active"><a href="about.html"> Отзывы </a></li>
+                    <li class=""><a href="about.html"> Отзывы </a></li>
                     <li class=""><a href="packages.html">Туры</a></li>
+		    <li class="active"><a href="blog.html">Блог</a></li>
                     <li class=""><a href="contact.html">Контакты</a></li>
                     <li class="booking"><a href="booking.html">Забронировать</a></li>
                 </ul>
