--- a/page-Hortica.html
+++ b/page-Hortica.html
@@ -123,7 +123,7 @@
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
                                 <li>
-                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>18 Апреля 2021 Года</span>
+                                    <span class="fa fa-calendar mr-2"></span>Дата: <span>Не Запланировано</span>
                                 </li>
                             </ul>
                         </div>
