--- a/blog-page.html
+++ b/blog-page.html
@@ -106,7 +106,7 @@
                         culpa quis. </p>
     
                     <div class="d-grid left-right mt-5 pb-md-5">
-                        <div class="buttons-singles tags">
+                        <div class="buttons-singles text-left tags">
                             <h4>Tags :</h4>
                             <a href="#blog-tag">Culture</a>
                             <a href="#blog-tag">Sports</a>
