--- a/blog-page.html
+++ b/blog-page.html
@@ -12,6 +12,67 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 <body>
+    
+    <!-- header -->
+
+    <header>
+
+        <div class="container">
+
+            <!-- nav -->
+
+            <nav class="py-md-4 py-3 d-lg-flex">
+
+                <div id="logo">
+
+                    <h1 class="mt-md-0 mt-2"> <a href="index.html"><span class="fa fa-map-signs"></span> Новый поворот
+
+                        </a></h1>
+
+                </div>
+
+                <label for="drop" class="toggle"><span class="fa fa-bars"></span></label>
+
+                <input type="checkbox" id="drop" />
+
+                <ul class="menu ml-auto mt-1">
+
+                    <li class=""><a href="index.html">Главная</a></li>
+
+                    <li class=""><a href="about.html"> Отзывы </a></li>
+
+                    <li class=""><a href="packages.html">Туры</a></li>
+
+		    <li class="active"><a href="blog.html">Блог</a></li>
+
+                    <li class=""><a href="contact.html">Контакты</a></li>
+
+                    <li class="booking"><a href="booking.html">Забронировать</a></li>
+
+                </ul>
+
+            </nav>
+
+            <!-- //nav -->
+
+        </div>
+
+    </header>
+
+    <!-- //header -->
+
+    <!-- banner -->
+
+    <section class="banner_inner" id="home">
+
+        <div class="banner_inner_overlay">
+
+        </div>
+
+    </section>
+
+    <!-- //banner -->
+    
     <div class="py-5 w3l-homeblock1 text-center">
     <div class="container mt-md-3 mb-5">
         <h3 class="blog-desc-big text-center mb-4">Your Blog Posts are Boring? Here are 9 Tips for
