--- a/blog.html
+++ b/blog.html
@@ -196,7 +196,7 @@
                     <div class="grids5-info">
                         <h4>01.</h4>
                         <div class="blog-info">
-                            <a href="#blog-single" class="blog-desc1"> How to Identify first blog post's topic
+                            <a href="blog-page.html" class="blog-desc1"> How to Identify first blog post's topic
                             </a>
                             <div class="author align-items-center mt-2 mb-1">
                                 <a href="#author">Johnson smith</a> in <a href="#url">Design</a>
