--- a/index.html
+++ b/index.html
@@ -878,6 +878,9 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
     <!-- /Yandex.Metrika counter -->
 
 
+    <script>
+       console.log("Туры выходного дня 'Новый Поворот'");
+    </script>
 
 </body>
 
