--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
     <!-- /Schema.org -->
     
     <!-- Yandex.Metrika counter -->
-    <!-<script type="text/javascript" >
+    <!--<script type="text/javascript" >
        (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
        m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
        (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
