--- a/page-LOL.html
+++ b/page-LOL.html
@@ -448,6 +448,9 @@
 	});
     </script>
     <!-- //owl-carousel -->
+    <script>
+       console.log("Туры выходного дня 'Новый Поворот'");
+    </script>
 
 </body>
 
