--- a/page-Limonariy.html
+++ b/page-Limonariy.html
@@ -514,6 +514,10 @@
 	});
     </script>
     <!-- //owl-carousel -->
+     <script>
+       console.log("Туры выходного дня 'Новый Поворот'");
+    </script>
+
 </body>
 
 </html>
