--- a/page-Lviv-for-weekend.html
+++ b/page-Lviv-for-weekend.html
@@ -528,6 +528,10 @@
       });
   </script>
 
+     <script>
+       console.log("Туры выходного дня 'Новый Поворот'");
+    </script>
+
 </body>
 
 </html>
