--- a/page-cheese-farm.html
+++ b/page-cheese-farm.html
@@ -557,6 +557,9 @@
         protect: true
       });
   </script>
+ <script>
+   console.log("Туры выходного дня 'Новый Поворот'");
+ </script>
 
 </body>
 
