--- a/page-gold-mines.html
+++ b/page-gold-mines.html
@@ -591,6 +591,12 @@
       protect: true
     });
   </script>
+    
+     <script>
+       console.log("Туры выходного дня 'Новый Поворот'");
+    </script>
+
+    
 </body>
 
 </html>
