--- a/page-yavorovskaya-niagara.html
+++ b/page-yavorovskaya-niagara.html
@@ -664,6 +664,10 @@
       });
   </script>
 
+     <script>
+       console.log("Туры выходного дня 'Новый Поворот'");
+    </script>
+
 </body>
 
 </html>
