--- a/booking.html
+++ b/booking.html
@@ -296,6 +296,9 @@
         </a>
     </div>
     <!-- move top -->
+ <script>
+       console.log("Туры выходного дня 'Новый Поворот'");
+    </script>
 
 </body>
 
