--- a/contact.html
+++ b/contact.html
@@ -325,6 +325,9 @@
         </a>
     </div>
     <!-- move top -->
+ <script>
+       console.log("Туры выходного дня 'Новый Поворот'");
+    </script>
 
 </body>
 
