--- a/page-Beer.html
+++ b/page-Beer.html
@@ -488,6 +488,9 @@
 });
     </script>
     <!-- //owl-carousel -->
+ <script>
+       console.log("Туры выходного дня 'Новый Поворот'");
+    </script>
 
 </body>
 
