--- a/page-zoo.html
+++ b/page-zoo.html
@@ -433,7 +433,7 @@
      <script>
        console.log("Туры выходного дня 'Новый Поворот'");
     </script>
-
+<script async src="https://comments.app/js/widget.js?3" data-comments-app-website="vEP9HRdh" data-limit="15"></script>
 </body>
 
 </html>
