--- a/page-zoo.html
+++ b/page-zoo.html
@@ -284,6 +284,9 @@
                                 </li>
                                 <ul>
                         </div>
+                          <!-- Виджет обсуждения Telegram -->      
+                                <script async src="https://comments.app/js/widget.js?3" data-comments-app-website="vEP9HRdh" data-limit="15"></script>
+                          <!-- //Виджет обсуждения Telegram-->
                      <hr>
                <p>
                 Тексты подсказок:
@@ -433,7 +436,7 @@
      <script>
        console.log("Туры выходного дня 'Новый Поворот'");
     </script>
-<script async src="https://comments.app/js/widget.js?3" data-comments-app-website="vEP9HRdh" data-limit="15"></script>
+
 </body>
 
 </html>
