--- a/page-yavorovskaya-niagara.html
+++ b/page-yavorovskaya-niagara.html
@@ -497,6 +497,11 @@
                                 </li>
                             <ul>
                         </div>
+                                
+                           <!-- Виджет обсуждения -->
+                           <script async src="https://comments.app/js/widget.js?3" data-comments-app-website="slpnpeOC" data-limit="15"></script>     
+                           <!-- //Виджет обсуждения -->   
+                                
                          <hr>
                          <p>
                            Тексты подсказок:
