--- a/page-walk-on-Dnieper.html
+++ b/page-walk-on-Dnieper.html
@@ -1,1 +1,50 @@
 <!-- page-walk-on-Dnieper.html -->
+
+
+
+3 мая 2021 НОВАЯ АВТОРСКАЯ ЭКСКУРСИЯ ЗАПОРОЖЬЕ НА ДНЕПРЕ | ПРОГУЛКА С "ИЗЮМИНКОЙ И ОГОНЬКОМ"
+
+Что ты знаешь о Запорожье? Спорим что наша экскурсия тебя удивит ?
+Мы знаем о самых привычных местах множество "изюминок" о которых ты даже не догадывалась/лся! 
+Именно ДЛЯ ТЕБЯ мы создали НОВУЮ АВТОРСКУЮ ЭКСКУРСИЮ с настоящим инфо "ОГОНЬКОМ". Будь первым! 
+
+ВНИМАНИЕ! Место начала и окончания экскурсии не совпадают, если вы на машине учтите этот момент )
+
+Стоимость: 95 грн, 80 грн 5-12 лет(до 30.4)
+105 грн/ 95 грн (1-2.05)
+до 4х лет бесплатно
+Бери с собой друзей и родных, это будет круто!
+
+------
+
+11:00 сбор в р-не Набережной(дополнительно сообщаем всем кто записался на экскурсию за 2 дня до даты ) Минутка позитива и в путешествие (smiley)
+
+У Вас хорошие отношения с тещей ? А со свекровью? Мы поможем найти "мосты" к их сердцу ;)
+Расскажем о секретах строительства Запорожских мостов... 
+Протопчем самые интересные тропки в Вознесеновском парке! 
+Немного окунемся в историю нашего острова Хортица и услышим историю любви Т.Шевченко связанную с знаменитой Тарасовой грушей! Кто еще не встретил свою "половинку" обязательно загадают заветное желание у цветущего дерева!
+
+Окончание экскурсии 12:30-13:00 )
+
+*время начала окончания экскурсии указаны предварительные, они могут быть изменены в зависимости от состава группы, без изменения указанной программы!
+
+-----
+В стоимость входит :
+Авторская экскурсия "Запорожье на Днепре" экскурсовода "Нового поворота";
+позитивный настрой на долгие месяцы вперед;
+яркий сувенир-магнит от Нового поворота
+-----
+В стоимость не входит:
+питание,
+доп расходы;
+проезд до места начала экскурсии и домой;
+-------
+
+
+
+#НовыйповоротЗапорожье #островХортица #ЗапорожьенеДнепреэскурсия 
+#экскурсияпоХортице #Днепрогэс #ЗапорожскаяСечь  #Запорожье  #Хортиця
+#какпровестивыходныеЗапорожье #афишаЗапорожье #новостиЗапорожье #Запорожье
+#кудапойтивЗапорожье #туристическоеагенствоЗапорожье  #мероприятияЗапорожье
+#Запорожье2021 #НовыйповоротЗапорожье #достопримечательностиЗапорожье
+#Zaporizhya #Запорожьемайские2021
