--- a/page-walk-on-Dnieper.html
+++ b/page-walk-on-Dnieper.html
@@ -241,7 +241,7 @@
                                             свою "половинку" обязательно загадают заветное
                                             желание у цветущего дерева!
 
-                                            Окончание экскурсии 12:30-13:00 <span class="fa fa-smile-o"></span>
+                                            Окончание экскурсии 12:30-13:00 <span class="fa fa-smile-o text-warning"></span>
                                         </p>
                                         
                                         <br />
