--- a/page-walk-on-Dnieper.html
+++ b/page-walk-on-Dnieper.html
@@ -279,7 +279,7 @@
                             <h5 class="alert-heading">В стоимость не входит:</h5>
                             <ul class="list-group list-group-flush">
                                 <li class="list-group-item list-group-item-danger ">
-                                   питание;
+                                   Питание;
                                 </li>
                                 <li class="list-group-item list-group-item-danger ">
                                     дополнительные расходы;
