--- a/page-walk-on-Dnieper.html
+++ b/page-walk-on-Dnieper.html
@@ -216,14 +216,14 @@
 
                                 <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
                                     data-parent="#accordionExample">
-                                    <div class="card-body txt-alg-jf">
+                                    <div class="card-body">
                                         
-                                        <p><strong>11:00</strong>
+                                        <p class="txt-alg-jf"><strong>11:00</strong>
                                            сбор в р-не Набережной
                                             (дополнительно сообщаем всем кто записался на экскурсию за 2 дня до даты )
                                             Минутка позитива и в путешествие <span class="fa fa-smile-o text-warning"></span>
                                         </p>
-                                        <p>
+                                        <p class="txt-alg-jf">
                                             У Вас хорошие отношения с тещей? А со свекровью? Мы поможем найти "мосты" к их сердцу ;)
                                             Расскажем о секретах строительства Запорожских мостов... 
                                             Протопчем самые интересные тропки в Вознесеновском парке! 
