--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                         <div class="overlay">
                             <div class="container">
                                 <div class="w3layouts-banner-info">
-                                    <h3 class="text-wh">Никогда не позволяйте своим воспоминаниям быть лучше, чем ваши
+                                    <h3 class="text-wh">Никогда не позволяйте своим воспоминаниям быть лучше, чем
                                         мечты. </h3>
                                     <h4 class="text-wh">Туры выходного дня "Новый Поворот"</h4>
                                     <div class="buttons mt-4">
@@ -220,7 +220,7 @@ src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
                         <div class="overlay">
                             <div class="container">
                                 <div class="w3layouts-banner-info">
-                                    <h3 class="text-wh">Никогда не позволяйте своим воспоминаниям быть лучше, чем ваши
+                                    <h3 class="text-wh">Никогда не позволяйте своим воспоминаниям быть лучше, чем 
                                         мечты.</h3>
                                     <h4 class="text-wh">Туры выходного дня "Новый Поворот"</h4>
                                     <div class="buttons mt-4">
