--- a/page-walk-on-Dnieper.html
+++ b/page-walk-on-Dnieper.html
@@ -137,7 +137,7 @@
                             Что ты знаешь о Запорожье? Спорим что наша экскурсия тебя удивит ?
                             Мы знаем о самых привычных местах множество "изюминок" о которых ты даже не
                             догадывалась/лся!
-                            Именно ДЛЯ ТЕБЯ мы создали НОВУЮ АВТОРСКУЮ ЭКСКУРСИЮ с настоящим инфо "ОГОНЬКОМ". Будь
+                            Именно ДЛЯ ТЕБЯ мы создали НОВУЮ АВТОРСКУЮ <span id="ExcursionWithFire">ЭКСКУРСИЮ с настоящим инфо "ОГОНЬКОМ"</span>. Будь
                             первым!
                         </p>
                         <hr>
@@ -299,12 +299,12 @@
                         <p>
                             Тексты подсказок:
                         </p>
-                        <span class="badge rounded-pill bg-secondary text-white"> Запорожье</span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Экскурсия в Запорожье</span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Новый Поворот Запорожье </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Запорожье на Днепре </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Путешествия </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Туризм </span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#Zaporozhye">Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#ExcursionToZaporozhye">Экскурсия в Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#logo">Новый Поворот Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#ZaporizhzhiaOnTheDnieper">Запорожье на Днепре</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#ExcursionWithFire">Экскурсия с "огоньком"</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#WalkWithTwist">Прогулка с изюминкой</a></span>
 
 
                         <!-- liq pay -->
