--- a/page-walk-on-Dnieper.html
+++ b/page-walk-on-Dnieper.html
@@ -299,14 +299,19 @@
                         <p>
                             Тексты подсказок:
                         </p>
-                        <span class="badge rounded-pill bg-secondary text-white"> Запорожье</span>
+                        <!--<span class="badge rounded-pill bg-secondary text-white"> Запорожье</span>
                         <span class="badge rounded-pill bg-secondary text-white"> Экскурсия в Запорожье</span>
                         <span class="badge rounded-pill bg-secondary text-white"> Новый Поворот Запорожье </span>
                         <span class="badge rounded-pill bg-secondary text-white"> Запорожье на Днепре </span>
                         <span class="badge rounded-pill bg-secondary text-white"> Путешествия </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Туризм </span>
+                        <span class="badge rounded-pill bg-secondary text-white"> Туризм </span>-->
 
-
+                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#Zaporozhye">Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#ExcursionToZaporozhye">Экскурсия в Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#logo">Новый Поворот Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#ZaporizhzhiaOnTheDnieper">Запорожье на Днепре</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#ExcursionWithFire">Экскурсия с "огоньком"</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#WalkWithTwist">Прогулка с изюминкой</a></span>
                         <!-- liq pay -->
                         <!--<div id="liqpay_checkout"></div>-->
                     </div>
