--- a/page-walk-on-Dnieper.html
+++ b/page-walk-on-Dnieper.html
@@ -306,12 +306,12 @@
                         <span class="badge rounded-pill bg-secondary text-white"> Путешествия </span>
                         <span class="badge rounded-pill bg-secondary text-white"> Туризм </span>-->
 
-                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#Zaporozhye">Запорожье</a></span>
-                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#ExcursionToZaporozhye">Экскурсия в Запорожье</a></span>
-                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#logo">Новый Поворот Запорожье</a></span>
-                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#ZaporizhzhiaOnTheDnieper">Запорожье на Днепре</a></span>
-                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#ExcursionWithFire">Экскурсия с "огоньком"</a></span>
-                        <span class="badge rounded-pill bg-secondary text-white"> <a href="#WalkWithTwist">Прогулка с изюминкой</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a title="Запорожье" href="#Zaporozhye">Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a title="Экскурсия в Запорожье" href="#ExcursionToZaporozhye">Экскурсия в Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a title="Новый Поворот Запорожье" href="#logo">Новый Поворот Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a title="Запорожье на Днепре" href="#ZaporizhzhiaOnTheDnieper">Запорожье на Днепре</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a title="Экскурсия с 'огоньком'" href="#ExcursionWithFire">Экскурсия с "огоньком"</a></span>
+                        <span class="badge rounded-pill bg-secondary text-white"> <a title="Прогулка с изюминкой" href="#WalkWithTwist">Прогулка с изюминкой</a></span>
                         <!-- liq pay -->
                         <!--<div id="liqpay_checkout"></div>-->
                     </div>
