--- a/page-walk-on-Dnieper.html
+++ b/page-walk-on-Dnieper.html
@@ -137,7 +137,7 @@
                             Что ты знаешь о <span id="Zaporozhye">Запорожье</span>? Спорим что наша экскурсия тебя удивит ?
                             Мы знаем о самых привычных местах множество "изюминок" о которых ты даже не
                             догадывалась/лся!
-                            Именно ДЛЯ ТЕБЯ мы создали НОВУЮ АВТОРСКУЮ ЭКСКУРСИЮ с настоящим инфо "ОГОНЬКОМ". Будь
+                            Именно ДЛЯ ТЕБЯ мы создали НОВУЮ АВТОРСКУЮ <span id="ExcursionWithFire">ЭКСКУРСИЮ с настоящим инфо "ОГОНЬКОМ"</span>. Будь
                             первым!
                         </p>
                         <hr>
@@ -299,20 +299,15 @@
                         <p>
                             Тексты подсказок:
                         </p>
-                        <!--<span class="badge rounded-pill bg-secondary text-white"> Запорожье</span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Экскурсия в Запорожье</span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Новый Поворот Запорожье </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Запорожье на Днепре </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Путешествия </span>
-                        <span class="badge rounded-pill bg-secondary text-white"> Туризм </span>-->
-
-                        <span class="badge rounded-pill bg-secondary text-white"> <a title="Запорожье" href="#Zaporozhye">Запорожье</a></span>
-                        <span class="badge rounded-pill bg-secondary text-white"> <a title="Экскурсия в Запорожье" href="#ExcursionToZaporozhye">Экскурсия в Запорожье</a></span>
-                        <span class="badge rounded-pill bg-secondary text-white"> <a title="Новый Поворот Запорожье" href="#logo">Новый Поворот Запорожье</a></span>
-                        <span class="badge rounded-pill bg-secondary text-white"> <a title="Запорожье на Днепре" href="#ZaporizhzhiaOnTheDnieper">Запорожье на Днепре</a></span>
-                        <span class="badge rounded-pill bg-secondary text-white"> <a title="Экскурсия с 'огоньком'" href="#ExcursionWithFire">Экскурсия с "огоньком"</a></span>
-                        <span class="badge rounded-pill bg-secondary text-white"> <a title="Прогулка с изюминкой" href="#WalkWithTwist">Прогулка с изюминкой</a></span>
-                        <!-- liq pay -->
+                       
+                        <span class="badge rounded-pill bg-secondary"> <a class="text-white" title="Запорожье" href="#Zaporozhye">Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary"> <a class="text-white" title="Экскурсия в Запорожье" href="#ExcursionToZaporozhye">Экскурсия в Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary"> <a class="text-white" title="Новый Поворот Запорожье" href="#logo">Новый Поворот Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary"> <a class="text-white" title="Запорожье на Днепре" href="#ZaporizhzhiaOnTheDnieper">Запорожье на Днепре</a></span>
+                        <span class="badge rounded-pill bg-secondary"> <a class="text-white" title="Экскурсия с 'огоньком'" href="#ExcursionWithFire">Экскурсия с "огоньком"</a></span>
+                        <span class="badge rounded-pill bg-secondary"> <a class="text-white" title="Прогулка с изюминкой" href="#WalkWithTwist">Прогулка с изюминкой</a></span>
+                        
+                                <!-- liq pay -->
                         <!--<div id="liqpay_checkout"></div>-->
                     </div>
                 </div>
