--- a/page-walk-on-Dnieper.html
+++ b/page-walk-on-Dnieper.html
@@ -120,7 +120,7 @@
                     <h3 class="title">Прогулка на Днепре</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
-                    <img src="images/on-page.jpg" alt="news image" class="img-fluid">
+                    <img src="images/walk-on-Dnieper-page" alt="news image" class="img-fluid">
                     <div class="blog-two-two">
                         <div class="blog-date-time mb-2">
                             <ul class="listing mt-3">
