--- a/page-walk-on-Dnieper.html
+++ b/page-walk-on-Dnieper.html
@@ -151,9 +151,9 @@
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-info-circle"></span><strong> Информация!</strong><br />
                             <span class="txt-alg-jf">
-                                Стоимость: 95 грн, 80 грн 5-12 лет(до 30.4)
-                                105 грн/ 95 грн (1-2.05)
-                                до 4х лет бесплатно
+                                Стоимость: 95 грн., 80 грн. - от 5 до 12 лет (30.04.2021);<br>
+                                Стоимость: 105 грн., 95 грн. - от 5 до 12 лет (01-02.05.2021).<br>
+                                До 4-х лет бесплатно.
                                 Бери с собой друзей и родных, это будет круто!
                             </span>
                         </div>
