--- a/page-walk-on-Dnieper.html
+++ b/page-walk-on-Dnieper.html
@@ -143,7 +143,7 @@
                         <hr>
 
                         <ul class="listing">
-                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>105 Грн</span></li>
+                            <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>95 Грн</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                         <!-- Alert info -->
@@ -151,8 +151,8 @@
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
                             <span class="fa fa-info-circle"></span><strong> Информация!</strong><br />
                             <span class="txt-alg-jf">
-                                Стоимость: 95 грн., 80 грн. - от 5 до 12 лет (30.04.2021);<br>
-                                Стоимость: 105 грн., 95 грн. - от 5 до 12 лет (01-02.05.2021).<br>
+                                Стоимость 30.04.2021: 95 грн., 80 грн. - от 5 до 12 лет;<br>
+                                Стоимость 01-02.05.2021: 105 грн., 95 грн. - от 5 до 12 лет.<br>
                                 До 4-х лет бесплатно.
                                 Бери с собой друзей и родных, это будет круто!
                             </span>
