--- a/packages.html
+++ b/packages.html
@@ -312,32 +312,6 @@
                     </div>
                 </div>
                 <!-- //Сырная ферма и Пасека -->
-        
-                <!--  Стамбул -->
-                <!--<div class="col-lg-3 col-sm-6 mb-5">
-                    <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Stambul.html">
-                            <img src="images/Stambul-mini.jpg" alt="Stambul" class="img-fluid" />
-                        </a>
-                        <p><span class="fa fa-tags"></span> <span>250</span><span class="fa fa-eur"></span> </p>
-                    </div>
-                    <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Стамбул, Турция.</h6>
-                        <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Stambul.html">
-                                Стамбул
-                            </a>
-                        </h5>
-                        <p class="">
-                           Фестиваль тюльпанов и экскурсия в Стамбуле...
-                        </p>
-                        <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>20-27 Апреля 2021 Года</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>7 Дней</span></li>
-                        </ul>
-                    </div>
-                </div> -->
-                <!--  //Стамбул  -->
 
                 <!--  Вино -->
                 <div class="col-lg-3 col-sm-6 mb-5">
@@ -361,27 +335,27 @@
                 </div>
                 <!--  //Вино -->
 
-                <!--  Грузия -->
+                <!--  Прогулка На Днепре -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-Georgia.html">
-                            <img src="images/Georgia-min.jpg" alt="Georgia" class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-walk-on-Dnieper.html">
+                            <img src="images/walk-on-Dnieper-min.jpg" alt="Прогулка На Днепре" class="img-fluid" />
                         </a>
-                        <p><span class="fa fa-tags"></span> <span>200</span><span class="fa fa-usd"></span></p>
+                        <p><span class="fa fa-tags"></span> <span>105грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Грузия</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Прогулка на Днепре</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-Georgia.html"> Походы по Грузии</a>
+                            <a href="https://novipovorot.pp.ua/page-walk-on-Dnieper.html">Прогулка на Днепре</a>
                         </h5>
-                        <p class="">Расписание походов по Грузии...</p>
+                        <p class="">Экскурсия в Запорожье на Днепре...</p>
                         <ul class="listing mt-3">
                             <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
-                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>9 Дней</span></li>
+                            <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
                 </div>
-                <!--  //Грузия  -->
+                <!--  //Прогулка На Днепре  -->
 
                 <!--  Турция -->
                 <div class="col-lg-3 col-sm-6 mb-5">
