--- a/packages.html
+++ b/packages.html
@@ -186,7 +186,7 @@
                         </h5>
                         <p class="">Экскурсия в Закарпатье с Новым поворотом </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 1-3 мая и 8-10 мая </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> 1-3 Мая и 8-10 Мая </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>3 Дня</span></li>
                         </ul>
                     </div>
@@ -210,7 +210,7 @@
                         </h5>
                         <p class="">Читай описание до конца и бронируй! </p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Каждые выходные </span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span> Каждые Выходные </span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>2 Дня</span></li>
                         </ul>
                     </div>
@@ -350,7 +350,7 @@
                         </h5>
                         <p class="">Экскурсия в Запорожье на Днепре...</p>
                         <ul class="listing mt-3">
-                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>2021 Год</span></li>
+                            <li><span class="fa fa-calendar mr-2"></span>Дата: <span>03 Мая 2021 Год</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
                     </div>
